[package]
name = "polkadot_payout"
version = "0.1.0"
authors = ["shirshak"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
reqwest = {version = "0.10.8", features=["gzip","json"]}
serde = {version = "1.0.117", features=["derive"]}
serde_json = "1.0.59"
structopt = "0.3.20"

# Todo change features to reduce compile time
tokio = {version = "0.2.0", features=["full"]}
